--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <p>Chega de desculpas! Com o <strong>Treino Ideal Premium</strong> você tem o que precisa pra mudar de vez: treino personalizado, acompanhamento de verdade e acesso direto pelo celular.</p>
 
     <h2>🎯 Por que essa apresentação?</h2>
-    <p>Apresentamos uma solução prática, exclusiva e com foco em resultados reais: um serviço de treino com acompanhamento profissional totalmente virtual, ideal para quem quer superar limites sem sair de casa.</p>
+    <p>Apresentamos uma solução prática, exclusiva e com foco em resultados reais: um serviço de treino com acompanhamento profissional totalmente virtual, ideal para quem quer superar limites.</p>
 
     <h2>💥 O que você vai receber:</h2>
     <ul>
