--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f4f4f4;
+      background-color: #0d0d0d;
+      color: #fff;
       overflow-x: hidden;
     }
     .header {
-      background: #1e1e1e;
-      color: #fff;
+      background: #0d0d0d;
+      color: #f1c40f;
       padding: 20px 10px;
       font-size: 24px;
       font-weight: bold;
@@ -26,16 +27,16 @@
       max-width: 900px;
       margin: 20px auto;
       padding: 20px;
-      background-color: #fff;
+      background-color: #1a1a1a;
       border-radius: 10px;
-      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+      box-shadow: 0px 0px 10px rgba(241, 196, 15, 0.2);
       text-align: center;
       opacity: 0;
       transform: translateY(50px);
       transition: opacity 0.8s ease-out, transform 0.8s ease-out;
     }
     h1, h2 {
-      color: #e63946;
+      color: #f1c40f;
     }
     p {
       font-size: 16px;
@@ -43,27 +44,34 @@
     .button {
       display: inline-block;
       padding: 15px 30px;
-      background-color: #e63946;
-      color: #fff;
+      background-color: #f1c40f;
+      color: #0d0d0d;
       font-weight: bold;
       text-decoration: none;
       border-radius: 5px;
       margin-top: 20px;
       transition: all 0.3s ease-in-out;
-      box-shadow: 0px 5px 15px rgba(230, 57, 70, 0.4);
+      box-shadow: 0px 5px 15px rgba(241, 196, 15, 0.4);
     }
     .button:hover {
-      background: #c52737;
+      background: #e1b400;
       transform: scale(1.05);
-      box-shadow: 0px 8px 20px rgba(230, 57, 70, 0.5);
+      box-shadow: 0px 8px 20px rgba(241, 196, 15, 0.5);
     }
     .image {
-      max-width: 60%;
+      max-width: 80%;
       border-radius: 10px;
       margin-bottom: 20px;
       opacity: 0;
       transform: scale(0.8);
       transition: opacity 0.8s ease-in-out, transform 0.8s ease-in-out;
+    }
+    .highlight-image {
+      max-width: 100%;
+      border-radius: 10px;
+      margin: 30px auto;
+      display: block;
+      box-shadow: 0px 0px 15px rgba(241, 196, 15, 0.3);
     }
     ul {
       text-align: left;
@@ -74,8 +82,8 @@
       margin-bottom: 10px;
     }
     @media (max-width: 768px) {
-      .image {
-        width: 80%;
+      .image, .highlight-image {
+        width: 100%;
       }
     }
     @keyframes fadeInDown {
@@ -95,13 +103,15 @@
   <div class="header">💪 Treino Ideal Premium - Evolua Sem Sair de Casa</div>
 
   <div class="container">
-    <img src="https://i.imgur.com/5QFhRvK.jpg" alt="Treinamento Online" class="image">
+    <img src="instrutor-treino-premium.png" alt="Instrutor com halteres" class="image">
 
     <h1>Treino personalizado com acompanhamento 100% online</h1>
     <p>Chega de desculpas! Com o <strong>Treino Ideal Premium</strong> você tem o que precisa pra mudar de vez: treino personalizado, acompanhamento de verdade e acesso direto pelo celular.</p>
 
     <h2>🎯 Por que essa apresentação?</h2>
-    <p>Apresentamos uma solução prática, exclusiva e com foco em resultados reais: um serviço de treino com acompanhamento profissional totalmente virtual, ideal para quem quer superar limites.</p>
+    <p>Apresentamos uma solução prática, exclusiva e com foco em resultados reais: um serviço de treino com acompanhamento profissional totalmente virtual, ideal para quem quer superar limites..</p>
+
+    <img src="treinando-em-casa.png" alt="Treinamento via celular" class="highlight-image">
 
     <h2>💥 O que você vai receber:</h2>
     <ul>
