--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #0d0d0d;
-      color: #fff;
+      background-color: #f4f4f4;
       overflow-x: hidden;
     }
     .header {
-      background: #0d0d0d;
-      color: #f1c40f;
+      background: #1e1e1e;
+      color: #fff;
       padding: 20px 10px;
       font-size: 24px;
       font-weight: bold;
@@ -27,16 +26,16 @@
       max-width: 900px;
       margin: 20px auto;
       padding: 20px;
-      background-color: #1a1a1a;
+      background-color: #fff;
       border-radius: 10px;
-      box-shadow: 0px 0px 10px rgba(241, 196, 15, 0.2);
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
       text-align: center;
       opacity: 0;
       transform: translateY(50px);
       transition: opacity 0.8s ease-out, transform 0.8s ease-out;
     }
     h1, h2 {
-      color: #f1c40f;
+      color: #e63946;
     }
     p {
       font-size: 16px;
@@ -44,19 +43,19 @@
     .button {
       display: inline-block;
       padding: 15px 30px;
-      background-color: #f1c40f;
-      color: #0d0d0d;
+      background-color: #e63946;
+      color: #fff;
       font-weight: bold;
       text-decoration: none;
       border-radius: 5px;
       margin-top: 20px;
       transition: all 0.3s ease-in-out;
-      box-shadow: 0px 5px 15px rgba(241, 196, 15, 0.4);
+      box-shadow: 0px 5px 15px rgba(230, 57, 70, 0.4);
     }
     .button:hover {
-      background: #e1b400;
+      background: #c52737;
       transform: scale(1.05);
-      box-shadow: 0px 8px 20px rgba(241, 196, 15, 0.5);
+      box-shadow: 0px 8px 20px rgba(230, 57, 70, 0.5);
     }
     .image {
       max-width: 80%;
@@ -65,13 +64,6 @@
       opacity: 0;
       transform: scale(0.8);
       transition: opacity 0.8s ease-in-out, transform 0.8s ease-in-out;
-    }
-    .highlight-image {
-      max-width: 100%;
-      border-radius: 10px;
-      margin: 30px auto;
-      display: block;
-      box-shadow: 0px 0px 15px rgba(241, 196, 15, 0.3);
     }
     ul {
       text-align: left;
@@ -82,7 +74,7 @@
       margin-bottom: 10px;
     }
     @media (max-width: 768px) {
-      .image, .highlight-image {
+      .image {
         width: 100%;
       }
     }
@@ -109,9 +101,9 @@
     <p>Chega de desculpas! Com o <strong>Treino Ideal Premium</strong> você tem o que precisa pra mudar de vez: treino personalizado, acompanhamento de verdade e acesso direto pelo celular.</p>
 
     <h2>🎯 Por que essa apresentação?</h2>
-    <p>Apresentamos uma solução prática, exclusiva e com foco em resultados reais: um serviço de treino com acompanhamento profissional totalmente virtual, ideal para quem quer superar limites..</p>
+    <p>Apresentamos uma solução prática, exclusiva e com foco em resultados reais: um serviço de treino com acompanhamento profissional totalmente virtual, ideal para quem quer superar limites.</p>
 
-    <img src="treinando-em-casa.png" alt="Treinamento via celular" class="highlight-image">
+    <img src="treinando-em-casa.png" alt="Pessoa treinando em casa" class="image">
 
     <h2>💥 O que você vai receber:</h2>
     <ul>
