--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Treino Ideal Premium - Transforme Seu Corpo</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <style>
@@ -95,7 +95,7 @@
   <div class="header">💪 Treino Ideal Premium - Evolua Sem Sair de Casa</div>
 
   <div class="container">
-    <img src="instrutor-treino-premium.png" alt="Instrutor com halteres" class="image">
+    <img src="Instrutor-Treino-Premium.PNG" alt="Instrutor com halteres" class="image">
 
     <h1>Treino personalizado com acompanhamento 100% online</h1>
     <p>Chega de desculpas! Com o <strong>Treino Ideal Premium</strong> você tem o que precisa pra mudar de vez: treino personalizado, acompanhamento de verdade e acesso direto pelo celular.</p>
@@ -103,7 +103,7 @@
     <h2>🎯 Por que essa apresentação?</h2>
     <p>Apresentamos uma solução prática, exclusiva e com foco em resultados reais: um serviço de treino com acompanhamento profissional totalmente virtual, ideal para quem quer superar limites.</p>
 
-    <img src="treinando-em-casa.png" alt="Pessoa treinando em casa" class="image">
+    <img src="Treinando-em-Casa.PNG" alt="Pessoa treinando em casa" class="image">
 
     <h2>💥 O que você vai receber:</h2>
     <ul>
