--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f4f4f4;
+      background-color: #0d0d0d;
+      color: #fff;
       overflow-x: hidden;
     }
     .header {
-      background: #1e1e1e;
-      color: #fff;
+      background: #0d0d0d;
+      color: #f1c40f;
       padding: 20px 10px;
       font-size: 24px;
       font-weight: bold;
@@ -26,16 +27,16 @@
       max-width: 900px;
       margin: 20px auto;
       padding: 20px;
-      background-color: #fff;
+      background-color: #1a1a1a;
       border-radius: 10px;
-      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+      box-shadow: 0px 0px 10px rgba(241, 196, 15, 0.2);
       text-align: center;
       opacity: 0;
       transform: translateY(50px);
       transition: opacity 0.8s ease-out, transform 0.8s ease-out;
     }
     h1, h2 {
-      color: #e63946;
+      color: #f1c40f;
     }
     p {
       font-size: 16px;
@@ -43,19 +44,19 @@
     .button {
       display: inline-block;
       padding: 15px 30px;
-      background-color: #e63946;
-      color: #fff;
+      background-color: #f1c40f;
+      color: #0d0d0d;
       font-weight: bold;
       text-decoration: none;
       border-radius: 5px;
       margin-top: 20px;
       transition: all 0.3s ease-in-out;
-      box-shadow: 0px 5px 15px rgba(230, 57, 70, 0.4);
+      box-shadow: 0px 5px 15px rgba(241, 196, 15, 0.4);
     }
     .button:hover {
-      background: #c52737;
+      background: #e1b400;
       transform: scale(1.05);
-      box-shadow: 0px 8px 20px rgba(230, 57, 70, 0.5);
+      box-shadow: 0px 8px 20px rgba(241, 196, 15, 0.5);
     }
     .image {
       max-width: 80%;
@@ -95,7 +96,7 @@
   <div class="header">💪 Treino Ideal Premium - Evolua Sem Sair de Casa</div>
 
   <div class="container">
-    <img src="Instrutor-Treino-Premium.PNG" alt="Instrutor com halteres" class="image">
+    <img src="Instrutor-Treino-Premium.png" alt="Instrutor com halteres" class="image">
 
     <h1>Treino personalizado com acompanhamento 100% online</h1>
     <p>Chega de desculpas! Com o <strong>Treino Ideal Premium</strong> você tem o que precisa pra mudar de vez: treino personalizado, acompanhamento de verdade e acesso direto pelo celular.</p>
@@ -103,7 +104,7 @@
     <h2>🎯 Por que essa apresentação?</h2>
     <p>Apresentamos uma solução prática, exclusiva e com foco em resultados reais: um serviço de treino com acompanhamento profissional totalmente virtual, ideal para quem quer superar limites.</p>
 
-    <img src="Treinando-em-Casa.PNG" alt="Pessoa treinando em casa" class="image">
+    <img src="Treinando-em-Casa.png" alt="Pessoa treinando em casa" class="image">
 
     <h2>💥 O que você vai receber:</h2>
     <ul>
