Update index.html 10

--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
       box-shadow: 0px 8px 20px rgba(241, 196, 15, 0.5);
     }
     .image {
-      max-width: 80%;
+      width: 100%;
+      max-width: 400px;
       border-radius: 10px;
-      margin-bottom: 20px;
+      margin: 0 auto 20px;
+      display: block;
       opacity: 0;
       transform: scale(0.8);
       transition: opacity 0.8s ease-in-out, transform 0.8s ease-in-out;
@@ -93,7 +95,7 @@
 </head>
 <body>
 
-  <div class="header">💪 Treino Ideal Premium - Evolua Sem Sair de Casa</div>
+  <div class="header">💪 Treino Premium</div>
 
   <div class="container">
     <img src="Instrutor-Treino-Premium.png" alt="Instrutor com halteres" class="image">
