--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Treino Premium - Transforme Seu Corpo</title>
+  <title>Treino Premium</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <style>
     body {
@@ -30,10 +30,30 @@
       background-color: #1a1a1a;
       border-radius: 10px;
       box-shadow: 0px 0px 10px rgba(241, 196, 15, 0.2);
-      text-align: center;
       opacity: 0;
       transform: translateY(50px);
       transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+    }
+    .intro-section {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+      text-align: left;
+    }
+    .intro-text {
+      flex: 1 1 300px;
+      min-width: 250px;
+    }
+    .image {
+      flex: 1 1 300px;
+      width: 100%;
+      max-width: 300px;
+      border-radius: 10px;
+      opacity: 0;
+      transform: scale(0.8);
+      transition: opacity 0.8s ease-in-out, transform 0.8s ease-in-out;
     }
     h1, h2 {
       color: #f1c40f;
@@ -58,16 +78,6 @@
       transform: scale(1.05);
       box-shadow: 0px 8px 20px rgba(241, 196, 15, 0.5);
     }
-    .image {
-      width: 100%;
-      max-width: 300px;
-      border-radius: 10px;
-      margin: 0 auto 20px;
-      display: block;
-      opacity: 0;
-      transform: scale(0.8);
-      transition: opacity 0.8s ease-in-out, transform 0.8s ease-in-out;
-    }
     ul {
       text-align: left;
       max-width: 600px;
@@ -77,8 +87,12 @@
       margin-bottom: 10px;
     }
     @media (max-width: 768px) {
+      .intro-section {
+        flex-direction: column;
+        text-align: center;
+      }
       .image {
-        width: 100%;
+        max-width: 100%;
       }
     }
     @keyframes fadeInDown {
@@ -98,10 +112,13 @@
   <div class="header">💪 Treino Premium</div>
 
   <div class="container">
-    <img src="Instrutor-Treino-Premium.png" alt="Instrutor com halteres" class="image">
-
-    <h1>Treino personalizado com acompanhamento 100% online</h1>
-    <p>Chega de desculpas! Com o <strong>Treino Ideal Premium</strong> você tem o que precisa pra mudar de vez: treino personalizado, acompanhamento de verdade e acesso direto pelo celular.</p>
+    <div class="intro-section">
+      <img src="Instrutor-Treino-Premium.png" alt="Instrutor com halteres" class="image">
+      <div class="intro-text">
+        <h1>Treino personalizado com acompanhamento 100% online</h1>
+        <p>Chega de desculpas! Com o <strong>Treino Ideal Premium</strong> você tem o que precisa pra mudar de vez: treino personalizado, acompanhamento de verdade e acesso direto pelo celular.</p>
+      </div>
+    </div>
 
     <h2>🎯 Por que essa apresentação?</h2>
     <p>Apresentamos uma solução prática, exclusiva e com foco em resultados reais: um serviço de treino com acompanhamento profissional totalmente virtual, ideal para quem quer superar limites.</p>
@@ -124,7 +141,7 @@
       <li>👉 Tenha orientação profissional no seu ritmo</li>
     </ul>
 
-    <a href="#" class="button">QUERO COMEÇAR AGORA 🔥</a>
+    <a href="https://suitsales.suitpay.app/Jd83DHvK" class="button" target="_blank">QUERO COMEÇAR AGORA 🔥</a>
   </div>
 
   <script>
