--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
       box-shadow: 0px 8px 20px rgba(241, 196, 15, 0.5);
     }
     .image, .highlight-image {
-      max-width: 80%;
+      width: 100%;
+      max-width: 300px;
       border-radius: 10px;
       margin: 30px auto;
       display: block;
@@ -78,6 +79,7 @@
     @media (max-width: 768px) {
       .image, .highlight-image {
         width: 100%;
+        max-width: 100%;
       }
     }
     @keyframes fadeInDown {
